Fix load more button layout issue

--- a/static/less/results.less
+++ b/static/less/results.less
@@ -117,6 +117,7 @@ header.results-label h3 {
       td {
         &.load-more-results {
           text-align: center;
+          padding: 12px 25px 12px 25px;
 
           a {
             display: block;
